2009-12-01  Per Bothner  <per@bothner.com>

	* FindTailCalls.java (walkClassExp): Don't setCanRead.
	* ModuleExp.java (allocFields): Remove special case for ClassExp.
	* FindCapturedVars.java (walkLambdaExp): Don't inline a named
	module-level function, even if we can.
	(capture): Needs lexical link even if can-call, not just can-read.
	* ClassExp.java (HAS_SUBCLASS): New flag.
	(<init>): Don't setCanRead.  Don't create PairClassType - yet.
	(setTypes): Don't need to create PairClassType the class is private
	and has no sub-classes.

2009-11-04  Per Bothner  <per@bothner.com>

	* ModuleExp.java (compilerAvailable): New static flag.
	(alwaysCompile): Initialize to compilerAvailable.
	* Compilation.java (mustCompileHere): Emit error message
	if compilerAvailable is false.
	(pushScope): Don't force compilation for LambdaExp if
	compiler is not available.

	* InlineCalls.java (walkTryExp): New method - optimize trivial case.

2009-11-01  Per Bothner  <per@bothner.com>

	* Declaration.java (flags): Chaneg from int to long.
	(getFlag, setFlag, printInfo): Update accordingly.
	* LambdaExp.java (compileAsMethod): Update accordingly.
	(VOLATILE_ACCESS, TRANSIENT_ACCESS): New flags.
	(getAccessFlags): Re-write to support new flags.

	* FindCapturedVars.java (capture): More informative warning about
	needing static link - and don't warn for ObjectExp.
	(walkClassExp): Remove now-redundant warning.

2009-10-31  Per Bothner  <per@bothner.com>

	* ModuleExp.java (isStatic):  Make static modules be the default.
	(evalModule2): Don't execute run if staticInitRun().
	(allocFields): Change/simplify logic to use shouldEarlyInit.
	* Declaration.java (shouldEarlyInit): New method.
	(setSyntax): Also set EARLY_INIT flag.
	(makeField): Only assign field to literal if field is static.
	Use shouldEarlyInit instead of testing EARLY_INIT.
	* SetExp.java (compile): Some re-orginization using shouldEarlyInit.
	* ModuleBody.java (runAsMain): Remove questionable and apparently